--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: rgb(62, 62, 249);
+    background-color:  #efdf4d;
     color: aliceblue;
     display: flex;
     font-family: sans-serif;
@@ -28,7 +28,7 @@ input[type='checkbox'] {
 }
 
 .container {
-    background-color: rgb(14, 10, 10);
+    background-color: #231f20;
     box-shadow: 0px 2px 10px grey;
     padding: 20px;
     width: 350px;
