--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ input[type='checkbox'] {
     margin-right: 0;
 }
 
+.header img {
+    width: 100vh;
+    
+}
 .container {
     background-color: #231f20;
     box-shadow: 0px 2px 10px grey;
