--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color:  #efdf4d;
+    background-color:  #357960;
     color: aliceblue;
     display: flex;
     font-family: sans-serif;
@@ -28,11 +28,11 @@ input[type='checkbox'] {
 }
 
 .header img {
-    width: 100vh;
+    width: auto;
     
 }
 .container {
-    background-color: #231f20;
+    background-color: #1d1d1d;
     box-shadow: 0px 2px 10px grey;
     padding: 20px;
     width: 350px;
@@ -40,7 +40,7 @@ input[type='checkbox'] {
 }
 
 .result-container {
-    background-color: rgb(15, 27, 37);
+    background-color: rgb(77, 74, 74);
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -72,7 +72,7 @@ input[type='checkbox'] {
     cursor: pointer;
     font-size: 15px;
     padding: 8px 12px;
-    background-color: cadetblue;
+    background-color: #653eff;
 }
 
 .btn-large {
@@ -87,7 +87,7 @@ input[type='checkbox'] {
     margin: 15px 0;
 } 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
     .result-container {
         font-size: 14px;
     }
